# ME400_AutomatedControl

./: README.md
openCV/test/cv_test/: CMakeLists.txt  CameraCalibrate.py  FindCheckerBoard.py  Undistort.py  camera_parameters.xml  cv_test.cpp  hough_test.cpp  openCVGrab.cpp  undistort.cpp
pybind11/test/: CMakeLists.txt  main.cpp
pylon/Samples/C/: CMakeLists.txt
pylon/Samples/C++/: CMakeLists.txt  Makefile
pylon/Samples/C++/DeviceRemovalHandling/: DeviceRemovalHandling.cpp
pylon/Samples/C++/Grab_CameraEvents/: CMakeLists.txt  Grab_CameraEvents.cpp
pylon/Samples/C++/Grab_ChunkImage/: Grab_ChunkImage.cpp
pylon/Samples/C++/Grab_MultiCast/: Grab_MultiCast.cpp
pylon/Samples/C++/Grab_MultipleCameras/: Grab_MultipleCameras.cpp
pylon/Samples/C++/Grab_Strategies/: Grab_Strategies.cpp
pylon/Samples/C++/Grab_UsingBufferFactory/: Grab_UsingBufferFactory.cpp
pylon/Samples/C++/Grab_UsingGrabLoopThread/: Grab_UsingGrabLoopThread.cpp
pylon/Samples/C++/Grab_UsingSequencer/: Grab_UsingSequencer.cpp
pylon/Samples/C++/ParametrizeCamera_AutoFunctions/: ParametrizeCamera_AutoFunctions.cpp
pylon/Samples/C++/ParametrizeCamera_GenericParameterAccess/: ParametrizeCamera_GenericParameterAccess.cpp
pylon/Samples/C++/ParametrizeCamera_NativeParameterAccess/: ParametrizeCamera_NativeParameterAccess.cpp
pylon/Samples/C++/ParametrizeCamera_SerialCommunication/: ParametrizeCamera_SerialCommunication.cpp
pylon/Samples/C++/Utility_FFC/: CMakeLists.txt  Utility_FFC.cpp
pylon/Samples/C++/Utility_ImageFormatConverter/: Utility_ImageFormatConverter.cpp
pylon/Samples/C/ActionCommands/: ActionCommands.c  CMakeLists.txt
pylon/Samples/C/Chunks/: CMakeLists.txt
pylon/Samples/C/Events/: CMakeLists.txt  Events.c
pylon/Samples/C/GenApiParam/: CMakeLists.txt
pylon/Samples/C/GrabTwoCameras/: CMakeLists.txt
pylon/Samples/C/ImageDecompressor/: CMakeLists.txt
pylon/Samples/C/OverlappedGrab/: CMakeLists.txt
pylon/Samples/C/ParametrizeCamera/: CMakeLists.txt
pylon/Samples/C/SimpleGrab/: CMakeLists.txt
pylon/Samples/C/SurpriseRemoval/: CMakeLists.txt  SurpriseRemoval.c
pylon/Samples/pylonDataProcessing/C++/: CMakeLists.txt
pylon/Samples/pylonDataProcessing/C++/barcode/: main.cpp
pylon/Samples/pylonDataProcessing/C++/buildersrecipe/: CMakeLists.txt  main.cpp
pylon/Samples/pylonDataProcessing/C++/camera/: main.cpp
pylon/Samples/pylonDataProcessing/C++/cmake/: Findpylon.cmake  FindpylonDataProcessing.cmake
pylon/Samples/pylonDataProcessing/C++/compositedatatypes/: main.cpp
pylon/Samples/pylonDataProcessing/RecipeTemplates/: template_AztecCodeReader.precipe  template_BarcodeReader.precipe  template_BlobAnalysis.precipe  template_CircleMeasurementsPro.precipe  template_ColorBlobAnalysis.precipe  template_DataMatrixCodeReader.precipe  template_EllipseMeasurementsPro.precipe  template_GeometricPatternMatchingPro.precipe  template_GrayValueTransformerBasic.precipe  template_ImageAlignment_TemplateMatchingStarter_CircleMeasurementsPro.precipe  template_ImageCombinerBasic_ImageSmoothingBasic.precipe  template_ImageFormatConverter.precipe  template_ImageLoading.precipe  template_ImageMorphologyBasic.precipe  template_LineMeasurementsPro.precipe  template_Measurements.precipe  template_PDF417CodeReader.precipe  template_QrCodeReader.precipe  template_ROICreator.precipe  template_RectangleMeasurementsPro.precipe  template_TemplateMatchingBasic.precipe
pylon/matlab/: hough_transform.m
pylon/test/Grab_and_show/: CMakeLists.txt  Grab_and_save.cpp  Grab_and_show.cpp  openCVGrab.cpp  openCVGrab_undistort.cpp
socket/test/: angle_calculator.cpp  read.py  readme.txt
src/: CMakeLists.txt  realtime_edge.cpp  realtime_hough.cpp  realtime_hough_undistort.cpp  realtime_hough_undistort_blue.cpp  realtime_hough_undistort_green.cpp  realtime_hough_undistort_red.cpp  realtime_hough_video.cpp  realtime_undistort.cpp
src/CameraCalibrate/: CameraCalibrate.py  CameraCalibrate2.py  CameraFilter.py  FisheyeCalibrate.py  calibrate.yml  camparameters.yml  yaml_read_test.py
src/socket/: CMakeLists.txt  hough_read.py  hough_socket.cpp
src/test/: CMakeLists.txt  Grab_and_save.cpp  Grab_video.cpp
